...
        // Opciones específicas según tipo de usuario
        when (userType) {
            TipoUsuario.ADMIN_APP -> {
                // Opciones para administrador
                NavigationDrawerItem(
                    icon = { Icon(Icons.Default.School, contentDescription = "Centros") },
                    label = { Text("Gestión de Centros") },
                    selected = false,
                    onClick = { onItemClick(AppScreens.GestionCentros.route) }
                )
                
                NavigationDrawerItem(
                    icon = { Icon(Icons.Default.Settings, contentDescription = "Configuración") },
...
                    onClick = { onItemClick(AppScreens.Config.route) }
                )
            }
            TipoUsuario.FAMILIAR -> {
                // Opciones para familiar
                NavigationDrawerItem(
                    icon = { Icon(Icons.Default.Face, contentDescription = "Mis Hijos") },
                    label = { Text("Mis Hijos") },
                    selected = false,
                    onClick = { onItemClick(AppScreens.ListaAlumnos.route) }
                )
                
                NavigationDrawerItem(
...
